--- a/.github/workflows/main_ghactionsazure.yml
+++ b/.github/workflows/main_ghactionsazure.yml
@@ -26,7 +26,6 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
@@ -57,7 +56,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          publish-profile: ${{secrets.AZUREAPPSERVICE_PUBLISHPROFILE}}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F0593B94E5CA44B09AB125AF97428E70 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B87622C9E00243ECBD62B94427BC4BB1 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D683A8D832DB41D88BF5430D00BE62C8 }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -66,4 +67,3 @@ jobs:
           app-name: 'ghactionsazure'
           slot-name: 'Production'
           package: .
-          
